# mdisd

./: CMakeLists.txt  README.md
doc/: Doxyfile
include/: RBFinterpolation.hpp  data.hpp  interpolationMethod.hpp  interpolator.hpp  rescaling.hpp  solveSVD.hpp
include/OLS/: OLSinterpolator.hpp
include/RBF/: RBFinterpolator.hpp  RBFunctions.hpp
src/: RBFinterpolation.cpp  bindings.cpp  data.cpp  interpolationMethod.cpp  rescaling.cpp  solveSVD.cpp
src/OLS/: OLSinterpolator.cpp
src/RBF/: RBFinterpolator.cpp  RBFunctions.cpp
test/case0/: Makefile  main.cpp
test/case1/: Makefile  README.md  main.cpp
test/case2/: Makefile  README.md  main.cpp
test/case3/: Makefile  README.md  main.cpp
test/case4/: Makefile  README.md  main.cpp
test/case5/: Makefile  README.md  main.cpp
test/case6/: README.md  test_python.py
